--- a/PetShop/PetShop.Blazor/Client/Pages/Employees.razor
+++ b/PetShop/PetShop.Blazor/Client/Pages/Employees.razor
@@ -1,12 +1,17 @@
 ﻿@page "/employees"
 @inject HttpClient httpClient
+@inject IJSRuntime jsRuntime
 
 <h3>Employees </h3>
 
 <input @bind=NewItemText placeholder="New item ..." />
 <button class="btn  btn-primary" @onclick="AddItem">Add</button>
 
-<table class="table table-striped table-hover">
+@if (isLoading) {
+	<p>Loading ... </p>
+}
+else {
+	<table class="table table-striped table-hover">
 	<thead>
 		<tr>
 			<th>Name</th>
@@ -28,6 +33,7 @@
 		}
 	</tbody>
 </table>
+}
 
 @code {
 
