--- a/PetShop/PetShop.Blazor/Client/Shared/NavMenu.razor
+++ b/PetShop/PetShop.Blazor/Client/Shared/NavMenu.razor
@@ -24,6 +24,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="petList">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Pets List
+            </NavLink>
+        </div>
     </nav>
 </div>
 
