--- a/PetShop/PetShop.Blazor/Client/Pages/PetList.razor
+++ b/PetShop/PetShop.Blazor/Client/Pages/PetList.razor
@@ -4,24 +4,15 @@
 
 <h3>PetList</h3>
 
-<input @bind=Breed placeholder="Breed" />
-<select @bind=animalType>AnimalType</select>
-<select @bind=status>PetStatus</select>
-<input @bind=Cost placeholder="Cost" />
-<input @bind=Price placeholder="Price" />
-<label for="cars">Choose a car:</label>
-
-@*<select name="AnimalType" id="ID">
-  <option value="volvo">Volvo</option>
-  <option value="saab">Saab</option>
-  <option value="mercedes">Mercedes</option>
-  <option value="audi">Audi</option>
-</select>*@
 
 <button class="btn btn-primary" @onclick="AddNewPet">Add New Pet</button>
 
 
-
+@if (isLoading)
+{
+    <p>Loading ...</p>
+}
+else{
  <table class="table table-striped table-hover">
         <thead>
             <tr>
@@ -44,14 +35,11 @@
                     <td>@pet.Cost</td>
                     <td>@pet.Price</td>
                      <td><button class="btn btn-danger" @onclick="() => DeletePet(pet)">Delete</button></td>
-                    @*<td><input value="@todo.Title" @onchange="(e)=> TitleChanged(e, todo)"/></td>
-                    <td><input type="checkbox" checked="@todo.Finished" @onchange="(e) => FinishedChanged(todo)" /></td>
-                    <td>@todo.FinishedDate</td>
-                    <td><button class="btn btn-danger" @onclick="() => DeleteItem(todo)">Delete</button></td>*@
                 </tr>
             }
         </tbody>
     </table>
+ }
 
 
 @code {
