--- a/PetShop/PetShop.Blazor/Client/Shared/NavMenu.razor
+++ b/PetShop/PetShop.Blazor/Client/Shared/NavMenu.razor
@@ -29,6 +29,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Pets List
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="customerList">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Customers List
+            </NavLink>
+        </div>
     </nav>
 </div>
 
