--- a/PetShop/PetShop.Blazor/Client/Shared/NavMenu.razor
+++ b/PetShop/PetShop.Blazor/Client/Shared/NavMenu.razor
@@ -25,13 +25,38 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="petList">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Pets List
+            <NavLink class="nav-link" href="customerList">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Customers
+            </NavLink>
+        </div>
+         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="employeeList">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Employees
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="customerList">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Customers List
+            <NavLink class="nav-link" href="petList">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Pets
+            </NavLink>
+        </div>
+         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="petFoodList">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Pet Food
+            </NavLink>
+        </div>
+         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="transactionList">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Transactions
+            </NavLink>
+        </div>
+         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="monthlyLedgerList">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Monthly Ledger 
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="petReportList">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Pet Reports
             </NavLink>
         </div>
     </nav>
