--- a/PetShop/PetShop.Blazor/Client/Pages/EmployeeList.razor
+++ b/PetShop/PetShop.Blazor/Client/Pages/EmployeeList.razor
@@ -29,6 +29,7 @@ else {
 				<td><input value="@emp.Surname" @onchange="(e)=>SurnameChanged(e, emp)"></td>
 				<td>@emp.EmployeeType</td>
 				<td><input value="@emp.SallaryPerMonth" @onchange="(e)=>SalaryChanged(e, emp)"></td>
+				<td>Transactions</td>
 				<td><button class="btn btn-danger" @onclick="() => DeleteItem(emp)">Delete</button></td>
 			</tr>
 		}
