--- a/PetShop/PetShop.Blazor/Client/Shared/NavMenu.razor
+++ b/PetShop/PetShop.Blazor/Client/Shared/NavMenu.razor
@@ -40,7 +40,7 @@
             </NavLink>
         </div>
          <div class="nav-item px-3">
-            <NavLink class="nav-link" href="petFoodList">
+            <NavLink class="nav-link" href="petfoodList">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Pet Food
             </NavLink>
         </div>
