--- a/PetShop/PetShop.Blazor/Client/Pages/PetFoodList.razor
+++ b/PetShop/PetShop.Blazor/Client/Pages/PetFoodList.razor
@@ -6,7 +6,7 @@
 
 
 
-<h3>Component</h3>
+<h3>PetFoodList</h3>
 
 <button class="btn btn-primary" @onclick="AddItem" >Add</button>
 
@@ -19,7 +19,6 @@ else{
         <thead>
             <tr>
                 <th>AnimalType</th>
-                
                 <th>Price</th>
                 <th>Cost</th>
             </tr>
@@ -29,7 +28,6 @@ else{
             {
                 <tr>
                     <td>@petfood.AnimalType</td>
-                    
                     <td>@petfood.Price</td>
                     <td>@petfood.Cost</td>
                     <td>
