meh customer selector

--- a/PetShop/PetShop.Blazor/Client/Components/CustomerSelect.razor
+++ b/PetShop/PetShop.Blazor/Client/Components/CustomerSelect.razor
@@ -5,7 +5,7 @@
     }
     @foreach (var customer in Customers)
     {
-        <option value="@customer.ID"> @customer.Name @customer.Surname </option>
+        <option value="@customer.ID"> @customer.Name </option>
     }
 </select>
 
