--- a/PetShop/PetShop.Blazor/Client/Pages/PetEdit.razor
+++ b/PetShop/PetShop.Blazor/Client/Pages/PetEdit.razor
@@ -1,4 +1,5 @@
 ﻿@page "/petlist/edit/{Id:int?}"
+@using PetShop.Model
 @inject HttpClient httpClient
 @inject NavigationManager navigationManager
 
@@ -15,13 +16,25 @@ else
             <label class="form-label">Breed</label>
             <input class="form-control" @bind="@PetItem.Breed" />
         </div>
-        <div class="col-md-6">
-            <label class="form-label">Animal Type</label>
-            <input class="form-control" @bind="@PetItem.AnimalType" />
+         <div class="col-md-6">
+            <label for="pet-type">Type</label>
+            <select name="pet-type" class="form-select" @bind="PetType">
+                <option value="-1">Select Pet Type</option>
+                @foreach (var item in Enum.GetValues(typeof(AnimalType)))
+                {
+                    <option value="@((int)item)">@item.ToString()</option>
+                }
+            </select>
         </div>
         <div class="col-md-6">
-            <label class="form-label">Pet Status</label>
-            <input class="form-control" @bind="@PetItem.PetStatus" />
+            <label for="pet-status">Status</label>
+            <select name="pet-status" class="form-select" @bind="PetStatus">
+                <option value="-1">Select Pet Status</option>
+                @foreach (var item in Enum.GetValues(typeof(PetStatus)))
+                {
+                    <option value="@((int)item)">@item.ToString()</option>
+                }
+            </select>
         </div>
         <div class="col-md-6">
             <label class="form-label">Price</label>
@@ -43,13 +56,33 @@ else
 @code {
     [Parameter] public int? ID { get; set; }
     PetEditViewModel PetItem { get; set;  }
+    private int PetType { get; set; } = -1;
+    private int PetStatus { get; set; } = -1;
+
     protected override async Task OnInitializedAsync()
     {
-        PetItem = await httpClient.GetFromJsonAsync<PetEditViewModel>($"pet/{(ID == null ? 0 : ID)}");
+        if(ID == null)
+        {
+            PetItem = await httpClient.GetFromJsonAsync<PetEditViewModel>($"pet/{(ID == null ? 0 : ID)}"); 
+        }
+        if(ID != null)
+        {
+            PetType = (int)PetItem.AnimalType;
+            PetStatus = (int)PetItem.PetStatus;
+        }
+
     }
     protected async Task OnSave()
     {
+         if (string.IsNullOrEmpty(PetItem.Breed) ||
+            PetType == -1 ||
+            PetStatus == -1 ||
+            PetItem.Cost == 0 ||
+            PetItem.Price == 0)
+            return;
         HttpResponseMessage response;
+        PetItem.AnimalType = (AnimalType)PetType;
+        PetItem.PetStatus = (PetStatus)PetStatus;
         if (ID == null)
         {
             response = await httpClient.PostAsJsonAsync("pet", PetItem);
