--- a/PetShop/PetShop.Blazor/Client/Pages/Index.razor
+++ b/PetShop/PetShop.Blazor/Client/Pages/Index.razor
@@ -2,8 +2,8 @@
 
 <PageTitle>Index</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Hello darkness my old friend...</h1>
 
-Welcome to your new app.
+Welcome to your new petshop.
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+
