Fix two employee bugs

--- a/PetShop/PetShop.Blazor/Client/Pages/EmployeeList.razor
+++ b/PetShop/PetShop.Blazor/Client/Pages/EmployeeList.razor
@@ -16,7 +16,7 @@ else {
 		<tr>
 			<th>Name</th>
 			<th>Surname</th>
-			<td>EmployeeType</td>
+			<th>EmployeeType</th>
 			<th>Monthly sallary</th>
 		</tr>
 	</thead>
