--- a/PetShop/PetShop.Blazor/Client/Pages/EmployeeList.razor
+++ b/PetShop/PetShop.Blazor/Client/Pages/EmployeeList.razor
@@ -3,7 +3,7 @@
 @inject IJSRuntime jsRuntime
 @inject NavigationManager navigationManager
 
-<h3>Employees </h3>
+<h3>Employee List</h3>
 
 <button class="btn  btn-primary" @onclick="AddItem">Add</button>
 
@@ -16,7 +16,7 @@ else {
 		<tr>
 			<th>Name</th>
 			<th>Surname</th>
-			<th>EmployeeType</th>
+			<th>Employee Type</th>
 			<th>Monthly sallary</th>
 		</tr>
 	</thead>
